--- a/app/src/main/res/drawable/bg_button_primary.xml
+++ b/app/src/main/res/drawable/bg_button_primary.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!-- ESTADO CUANDO EL BOTÓN ESTÁ PRESIONADO -->
+    <!-- Aquí pones el color más oscuro -->
     <item android:state_pressed="true">
         <shape>
             <corners android:radius="@dimen/corner_20"/>
-            <solid android:color="@color/brand_primary_dark"/>
+            <solid android:color="#150000"/> <!-- Ejemplo: Azul Oscuro -->
         </shape>
     </item>
+
+    <!-- ESTADO NORMAL O POR DEFECTO -->
+    <!-- Aquí pones el color principal -->
     <item>
         <shape>
             <corners android:radius="@dimen/corner_20"/>
-            <solid android:color="@color/brand_primary"/>
+            <solid android:color="#3C132F"/> <!-- Ejemplo: Azul Brillante -->
         </shape>
     </item>
+
 </selector>
