--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -130,6 +130,18 @@
                     android:text="Cámara"
                     android:textColor="@color/text_main" />
 
+                <Button
+                    android:id="@+id/btnConfiguracion"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_columnWeight="1"
+                    android:layout_gravity="fill_horizontal"
+                    android:layout_margin="4dp"
+                    android:drawableTop="@drawable/baseline_settings_24"
+                    android:text="Configuracion"
+                    android:textColor="@color/text_main" />
+
                 <!-- Fila 4 -->
 
                 <!-- (Añade aquí tu botón de WiFi o cualquier otro) -->
