--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,6 @@
     android:layout_height="match_parent"
     android:background="@color/app_bg">
 
-    <!-- Header con gradiente -->
     <View
         android:id="@+id/header"
         android:layout_width="0dp"
@@ -18,7 +17,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Título -->
     <TextView
         android:id="@+id/tvTitulo"
         android:layout_width="0dp"
@@ -35,7 +33,6 @@
         app:layout_constraintTop_toTopOf="@id/header"
         app:layout_constraintVertical_bias="0.75"/>
 
-    <!-- Subtítulo -->
     <TextView
         android:id="@+id/tvSubtitulo"
         android:layout_width="0dp"
@@ -49,15 +46,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Tarjeta del formulario -->
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/tarjetaFormulario"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_card"
-        android:orientation="vertical"
         android:elevation="6dp"
         android:translationY="-40dp"
+        android:padding="20dp"
         android:layout_marginStart="@dimen/space_16"
         android:layout_marginEnd="@dimen/space_16"
         app:layout_constraintTop_toBottomOf="@id/header"
@@ -67,19 +63,20 @@
 
         <EditText
             android:id="@+id/edtEmail"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="@string/email_hint"
             android:inputType="textEmailAddress"
             android:textColor="@color/text_main"
             android:textColorHint="@color/text_dim"
             android:imeOptions="actionNext"
-            android:paddingTop="@dimen/space_8"
-            android:paddingBottom="@dimen/space_8"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <EditText
             android:id="@+id/edtPass"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_12"
             android:hint="@string/password_hint"
@@ -87,12 +84,13 @@
             android:textColor="@color/text_main"
             android:textColorHint="@color/text_dim"
             android:imeOptions="actionDone"
-            android:paddingTop="@dimen/space_8"
-            android:paddingBottom="@dimen/space_8"/>
+            app:layout_constraintTop_toBottomOf="@id/edtEmail"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <Button
             android:id="@+id/btnLogin"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_20"
             android:background="@drawable/bg_button_primary"
@@ -100,7 +98,10 @@
             android:textColor="@color/on_primary"
             android:textStyle="bold"
             android:paddingTop="14dp"
-            android:paddingBottom="14dp"/>
+            android:paddingBottom="14dp"
+            app:layout_constraintTop_toBottomOf="@id/edtPass"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
             android:id="@+id/tvRecuperarpass"
@@ -108,30 +109,35 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_12"
             android:text="@string/olviste_pass"
-            android:textColor="@color/brand_primary"/>
+            android:textColor="@color/brand_primary"
+            app:layout_constraintTop_toBottomOf="@id/btnLogin"
+            app:layout_constraintStart_toStartOf="parent"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/tvNoCuenta"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_12"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:text="@string/no_cuenta"
+            android:textColor="@color/text_dim"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintTop_toBottomOf="@id/tvRecuperarpass"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tvCrear"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/no_cuenta"
-                android:textColor="@color/text_dim"/>
+        <TextView
+            android:id="@+id/tvCrear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/crear_cuenta"
+            android:textStyle="bold"
+            android:paddingStart="@dimen/space_8"
+            android:paddingEnd="0dp"
+            android:textColor="@color/brand_primary"
+            app:layout_constraintTop_toTopOf="@id/tvNoCuenta"
+            app:layout_constraintStart_toEndOf="@id/tvNoCuenta"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-            <TextView
-                android:id="@+id/tvCrear"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/crear_cuenta"
-                android:textStyle="bold"
-                android:paddingStart="@dimen/space_8"
-                android:textColor="@color/brand_primary"/>
-        </LinearLayout>
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
