--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -66,6 +66,20 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"/>
 
+
+            <TextView
+                android:id="@+id/tvEnviarSms"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Enviar SMS de Soporte"
+                android:textSize="16sp"
+                android:gravity="center_vertical"
+                android:drawableEnd="@drawable/baseline_sms_24"
+                android:clickable="true"
+                android:focusable="true"
+                android:background="?attr/selectableItemBackground"
+                android:padding="16dp"/>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
