--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -154,21 +154,21 @@
                     android:textColor="@color/text_main" />
 
                 <!-- Fila 4 -->
-                <Button
-                    android:id="@+id/btnMaps"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_columnWeight="1"
-                    android:layout_gravity="fill_horizontal"
-                    android:layout_margin="4dp"
-                    android:drawableTop="@drawable/outline_file_map_24"
-                    android:text="Mapa"
-                    android:textColor="@color/text_main" />
-
-                <!-- (Añade aquí tu botón de WiFi o cualquier otro) -->
 
             </GridLayout>
+
+            <Button
+                android:id="@+id/btnMaps"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill_horizontal"
+                android:layout_margin="4dp"
+                android:drawableTop="@drawable/outline_file_map_24"
+                android:text="Mapa"
+                android:textColor="@color/text_main" />
+
 
             <Button
                 android:id="@+id/btnFoto"
